# no-show-prediction-model

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
no_show_prediction_model/: __init__.py  dataset.py  features.py  plots.py
no_show_prediction_model/modeling/: predict.py  train.py
notebooks/: 01_EDA.ipynb
